deploys/dockers/envoy-proxy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081

cluster_manager:
  outlier_detection:
    event_log_path: "/dev/stdout"

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/oai" }
                          route: { cluster: openapi }
                        - match: { prefix: "/gql" }
                          route: { cluster: graphql_server }
                        - match:
                            { prefix: "/coolstore.CatalogService/", grpc: {} }
                          route:
                            {
                              cluster: catalog_grpc_service,
                              max_grpc_timeout: 0s,
                            }
                        - match: { prefix: "/coolstore.CartService/", grpc: {} }
                          route:
                            { cluster: cart_grpc_service, max_grpc_timeout: 0s }
                        - match:
                            { prefix: "/coolstore.InventoryService/", grpc: {} }
                          route:
                            {
                              cluster: inventory_grpc_service,
                              max_grpc_timeout: 0s,
                            }
                        - match:
                            { prefix: "/coolstore.RatingService/", grpc: {} }
                          route:
                            {
                              cluster: rating_grpc_service,
                              max_grpc_timeout: 0s,
                            }
                      cors: 
                        allow_origin_string_match: 
                          - safe_regex: 
                              google_re2: {}
                              regex: \*
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                http_filters:
                  - name: envoy.grpc_json_transcoder
                    config:
                      proto_descriptor: /tmp/envoy/proto.pb
                      services:
                        [
                          coolstore.CartService,
                          coolstore.InventoryService,
                          coolstore.CatalogService,
                          coolstore.RatingService,
                        ]
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                  - name: envoy.cors
                  - name: envoy.router
  clusters:
    - name: openapi
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: openapi
            port_value: 5010
    - name: graphql_server
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: graphql-server
            port_value: 5011
    - name: catalog_grpc_service
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: catalog-service
            port_value: 5002
    - name: cart_grpc_service
      connect_timeout: 0.25s
      type: static
      lb_policy: round_robin
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: 192.168.1.5
            port_value: 5003
    - name: inventory_grpc_service
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: inventory-service
            port_value: 5004
    - name: rating_grpc_service
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: rating-service
            port_value: 5007
